# cronus

./: .clang-format  .clang-tidy  .clangd  .gitignore  .luarc.json  README.md  addr2line.sh  boot.sh  config.chariot  fab.lua  flake.nix  init.c  meson.build  meson_options.txt  ports.chariot  terminal.c  ubsan.c
abi/sysv/: elf.c
arch/x86_64/: event.c  exception.c  init.c  interrupt.asm  interrupt.c  mem.asm  profiler.c  ptm.c  sched.asm  sched.c  syscall.asm  syscall.c  time.c  tlb.c
common/: buffer.c  log.c  panic.c
common/lock/: mutex.c  spinlock.c
dev/: acpi.c  pci.c  uacpi.c
fs/: rdsk.c  tmpfs.c  vfs.c
include/: init.h
include/arch/: cpu.h  init.h  interrupt.h  sched.h
include/common/: attr.h  buffer.h
include/dev/: acpi.h
include/graphics/: draw.h
include/lib/: atomic.h  macros.h  mem.h  rb.h
include/memory/: earlymem.h  heap.h  page.h  pmm.h  slab.h  vm.h
include/sched/: sched.h  thread.h
include/sys/: cpu.h  dw.h  event.h  hook.h  init.h  module.h  time.h
kernel/: Makefile  conf.sh  init.c  meson.build  meson_options.txt  ring_buffer.c  terminal.c  terminal.h  ubsan.c
kernel/abi/: elyboot.c
kernel/abi/sysv/: elf.c  elf64.h
kernel/arch/: cpu.h  cronlink.h  debug.h  elf.h  event.h  interrupt.h  mem.h  mmio.h  page.h  ptm.h  sched.h  types.h
kernel/arch/include/arch/: cpu.h  debug.h  elf.h  event.h  init.h  interrupt.h  mmio.h  ptm.h  sched.h  time.h
kernel/arch/x86_64/: cronlink.c  debug.c  debug.h  debug_prof.c  event.c  exception.c  exception.h  init.c  init.h  interrupt.asm  interrupt.c  interrupt.h  mem.asm  meson.build  profiler.c  profiler.h  ptm.c  ptm.h  sched.asm  sched.c  sched.h  syscall.asm  syscall.c  syscall.h  thread.h  time.c  tlb.c  tlb.h
kernel/arch/x86_64/abi/sysv/: elf.c  elf.h  sysv.c  sysv.h
kernel/arch/x86_64/cpu/: cpu.c  cpu.h  cpuid.c  cpuid.h  cr.h  fpu.c  fpu.h  gdt.c  gdt.h  lapic.c  lapic.h  pat.h  tss.c  tss.h
kernel/arch/x86_64/dev/: hpet.c  hpet.h  ioapic.c  ioapic.h  mmio.asm  pic8259.h  pit.c  pit.h  qemu_debug.c  qemu_debug.h
kernel/arch/x86_64/include/arch/: cpu.h  elf.h  interrupt.h  mem.h  page.h
kernel/arch/x86_64/include/x86_64/: exception.h  interrupt.h  thread.h
kernel/arch/x86_64/include/x86_64/cpu/: cpu.h  msr.h  port.h
kernel/arch/x86_64/sysv/: elf.c  elf.h  sysv.c  sysv.h
kernel/common/: assert.h  buffer.c  buffer.h  log.c  log.h  panic.c  panic.h
kernel/common/abi/: elf64.c
kernel/common/abi/sysv/: elf.c  elf.h  elf64.h
kernel/common/lock/: mutex.c  mutex.h  spinlock.c  spinlock.h
kernel/dev/: acpi.c  pci.c  pci.h  uacpi.c
kernel/dev/acpi/: acpi.c  acpi.h  uacpi.c
kernel/fs/: rdsk.c  tmpfs.c  vfs.c  vfs.h
kernel/graphics/: draw.c  draw.h  font_basic.c  framebuffer.h
kernel/include/abi/syscall/: syscall.h
kernel/include/abi/sysv/: elf64.h
kernel/include/common/: assert.h
kernel/include/common/lock/: mutex.h
kernel/include/fs/: tmpfs.h
kernel/include/graphics/: font.h
kernel/include/lib/: atomic.h  barrier.h  container.h  macros.h  rb.h  string.h
kernel/include/memory/: page.h
kernel/include/sched/: reaper.h
kernel/include/sys/: event.h  init.h  interrupt.h
kernel/include/syscall/: syscall.h
kernel/init/: init.c
kernel/lib/: container.h  format.h  list.c  list.h  math.h  mem.h  param.h  rb.c  rb.h  string.c  string.h
kernel/memory/: earlymem.c  earlymem.h  heap.c  heap.h  hhdm.h  mmio.c  mmio.h  page.h  pmm.c  pmm.h  slab.c  slab.h  vm.c  vm.h
kernel/sched/: process.c  process.h  reaper.c  reaper.h  sched.c  sched.h  thread.h
kernel/src/: meson.build  ring_buffer.c  ring_buffer.h  terminal.c  terminal.h  ubsan.c
kernel/src/arch/: cpu.h  debug.h  interrupt.h  mem.h  page.h  ptm.h  sched.h
kernel/src/arch/x86_64/: debug.c  debug.h  debug_prof.c  exception.c  exception.h  init.c  init.h  interrupt.S  interrupt.c  interrupt.h  mem.S  meson.build  ptm.c  ptm.h  sched.S  sched.c  sched.h  syscall.asm  syscall.c  syscall.h  thread.h
kernel/src/arch/x86_64/cpu/: cpu.c  cpu.h  fpu.c  fpu.h  gdt.asm  gdt.c  gdt.h  lapic.c  lapic.h  msr.h  port.h  tss.c  tss.h
kernel/src/arch/x86_64/dev/: hpet.c  hpet.h  ioapic.c  pic8259.c  pic8259.h  pit.c  pit.h  qemu_debug.h  qemu_serial.c  qemu_serial.h
kernel/src/arch/x86_64/sys/: cpu.c  cpu.h  cpuid.c  cpuid.h  cr.h  fpu.c  fpu.h  gdt.c  gdt.h  lapic.c  lapic.h  msr.h  port.h  tss.h
kernel/src/arch/x86_64/sysv/: elf.c  sysv.c
kernel/src/common/: assert.h  auxv.h  log.c  log.h  panic.c  panic.h  spinlock.c  spinlock.h
kernel/src/common/lock/: mutex.c  mutex.h  sema.c  sema.h  spinlock.c  spinlock.h  wait.c  wait.h
kernel/src/dev/: pci.c  pci.h
kernel/src/dev/acpi/: acpi.c  acpi.h  uacpi.c
kernel/src/fs/: rdsk.c  rdsk.h  tmpfs.c  vfs.c  vfs.h
kernel/src/graphics/: draw.c  draw.h  font.h  font_basic.c  framebuffer.h
kernel/src/lib/: container.h  format.h  list.h  math.h  mem.c  mem.h  string.c
kernel/src/memory/: heap.c  heap.h  hhdm.h  page.h  pmm.c  pmm.h  slab.c  slab.h  vm.c  vm.h
kernel/src/sched/: process.c  process.h  reaper.c  sched.c  sched.h  thread.h
kernel/src/sys/: cpu.c  cpu.h  ipl.c  ipl.h  time.c  time.h
kernel/src/syscall/: syscall.c  syscall_mem.c
kernel/sys/: cpu.h  cronlink.c  cronlink.h  dw.c  dw.h  event.c  event.h  init.c  init.h  interrupt.h  kernel_symbol.c  kernel_symbol.h  module.c  module.h  time.c
kernel/syscall/: syscall.c  syscall.h  syscall_mem.c
lib/: format.c  list.c  mem.c
memory/: earlymem.c  heap.c  mmio.c  pmm.c  slab.c  vm.c
mlibc-sysdeps/elysium/: meson.build
modules/: test.c  test_pmm.c  test_vm.c
modules/test/: Makefile  link.ld  test.c
sched/: process.c  sched.c
subprojects/: cc-runtime.wrap  freestnd-c-hdrs.wrap  tartarus-bootloader.wrap  uacpi.wrap
support/: link.x86_64.ld  mkimg_bios.toml  mkimg_efi.toml  tartarus.cfg
sys/: cpu.c  dw.c  event.c  init.c  kernel_symbol.c  module.c
syscall/: syscall_mem.c
tools/: .gitignore  addr2line.sh  boot.sh  dump.sh  format.sh  gen_kernel_headers.sh  ide_setup.sh  install_usb.sh  setup.sh  todos.py
tools/ksym/: ksym.c  ksym.h
tools/rdsk/: rdsk.c  rdsk.hexpat
(+42 files in other folders)
